--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
   <div id="toast" class="toast" role="status" aria-live="polite" aria-atomic="true"></div>
 
   <script>
-    const FALLBACK_WEBHOOK = "https://n8n.wbtech.dev/webhook-test/checkin";
+    const FALLBACK_WEBHOOK = "https://n8n.wbtech.dev/webhook/checkin";
 
     const video = document.getElementById('video');
     const cameraSelect = document.getElementById('cameraSelect');
